# AI-Agent-Crew-01

./: CV_Responder.ipynb
NatureTrail/: requirements.txt
NatureTrail/NatureTrail/: naturetrail.db  naturetrail_app.py  pyproject.toml
project_01/: pyproject.toml
project_01/src/pr7/: main.py  main1.py  main2.py
