[project]
name = "pr7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AhmedRaza", email = "sheikhahlhmed670@gmail.com.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
pr7 = "pr7:main"
simpleflow = "pr7.main:kickoff"
chainprompt = "pr7.main1:kickoff"
routerun = "pr7.main2:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
